crates/baml-bridge/tests/ui/map_key_non_string.rs
use baml_bridge::BamlType;
use std::collections::HashMap;

#[derive(BamlType)]
struct Bad {
    values: HashMap<u32, String>,
}

fn main() {}
